update wesite template

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>Robi object detection</title>
+    <title>Coral Edge TPU object detection demonstrator</title>
   </head>
   <body>
-    <h1>Robi vision object detection</h1>
+    <h1>Coral Edge TPU object detection demonstrator</h1>
     <img src="{{ url_for('video_feed') }}">
   </body>
 </html>
